add Discovery Topic

--- a/config.yaml.example
+++ b/config.yaml.example
@@ -9,6 +9,7 @@ mqtt:
   username:	#MQTT username
   password:	#MQTT password
   port: 1883 #MQTT port
+  discovery_topic: #Home Assistant Discovery Topic
   command_topic: vacuum/command	#MQTT topic for receiving commands
   state_topic: vacuum/state	#MQTT topic for publishing state
   publish_wait_seconds: 5 #Delay in seconds before updating state again
